--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "mdbreact": "^5.2.0",
     "qrcode": "^1.5.0",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
