--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "mdbreact": "^5.2.0",
+    "ng2-charts": "^3.0.11",
     "qrcode": "^1.5.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router": "^6.3.0",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.2",
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
